# ImageClassifierLightning

./: .gitignore  LICENSE  README.md  classifier.py  config.py  eval-lightning.ipynb  limit_dataset.py  main.py  pyproject.toml  split_dataset.py  test.py
config/: config.template.yaml  config.yaml
config/dataset/: CFGAN.yaml  CFGANwoACL.yaml  FastGAN.yaml  ProjACL.yaml  default.yaml  grape-423-original.yaml  grape-423-proj.yaml  grape-423-projacl.yaml  grape-original.yaml  grape-proj.yaml  grape-projacl.yaml  original.yaml  tomato-original.yaml
config/models/: DenseNet.yaml  default.yaml  effib0.yaml  mobilenetV2.yaml  resnet-18.yaml  resnet-50.yaml  vgg-11.yaml  vgg-16.yaml
config/trainer/: default.yaml
config/wandb/: default.yaml  wandb.yaml
modules/: classifier.py
src/: limit_dataset.py  main.py  split_dataset.py
src/modules/: classifier.py
