[project]
name = "ImageClassifierLightning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fastsnowy", email = "61731151+fastsnowy@users.noreply.github.com" }
]
dependencies = [
    "wandb>=0.16.0",
    "rich>=13.7.0",
    "hydra-core>=1.3.2",
    "typer[all]>=0.9.0",
    "timm>=0.9.12",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "pytorch-lightning>=2.1.2",
    "torchmetrics>=1.2.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[sources]]
name="torch"
url="https://download.pytorch.org/whl/cu121"
type="index"
