[project]
name = "imageclassifierlightning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fastsnowy", email = "61731151+fastsnowy@users.noreply.github.com" }
]
dependencies = [
    "wandb==0.15.4",
    "rich>=13.4.2",
    "hydra-core>=1.3.2",
    "scikit-learn==1.2.0",
    "torchvision==0.14.0+cu117",
    "torch==1.13.0+cu117",
    "torchmetrics>=1.0.0",
    "timm==0.6.12",
    "pytorch-lightning==1.8.6",
    "typer[all]>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name="torch"
url="https://download.pytorch.org/whl/cu117"
type="index"
